--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
   <body>
     <div id="navbar">
       <div id="name">
-        <img src="./image/download (12).jpg" alt="" width="100" />
-        <h1><b>fahad</b></h1>
+        <img src="./image/images.png" alt="" width="100" />
+        <h1><b>M.Fahad</b></h1>
       </div>
        <div id="navbar"></div>
          <ul id="list">
           <li> <b> <h1>Home</h1></b></li>
           <li><b><h1>About</h1></b></li>
           <li><b><h1>Services</h1></b></li>
-          <li><b><h1>Contact</h1></b></li>
+          <button type="button"><b><h1>Contact</h1></b></button>
          </ul>
         </div>
+    </div>
+    <div id="main">
+      <div id="left">
+        <div id="text">
+          <h1>Hello, I’m M.Fahad</h1>
+          <p>I'm a Freelance<strong>UI/UX</strong> Designer and Developer based in London, England. I strives to build immersive and
+             beautiful web applications through carefully crafted code and user-centric design.</p>
+          <Button>Contact me</Button>
+        </div>
+      </div>
+      <div id="right">
+        <img src="./image/21a49a2f-7332-4283-a622-1d41e9bd91ce-removebg-preview.png" alt="">
+      </div>
     </div>
   </body>
 </html>
