--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
        <div id="navbar"></div>
          <ul id="list">
-          <li> <b> <h1>Home</h1></b></li>
+          <button type="button"><li> <b> <h1>Home</h1></b></li></button>
           <li><b><h1>About</h1></b></li>
           <li><b><h1>Services</h1></b></li>
           <button type="button"><b><h1>Contact</h1></b></button>
@@ -27,12 +27,34 @@
           <h1>Hello, I’m M.Fahad</h1>
           <p>I'm a Freelance<strong>UI/UX</strong> Designer and Developer based in London, England. I strives to build immersive and
              beautiful web applications through carefully crafted code and user-centric design.</p>
-          <Button>Contact me</Button>
+          <button>Contact me</button>
         </div>
       </div>
       <div id="right">
         <img src="./image/21a49a2f-7332-4283-a622-1d41e9bd91ce-removebg-preview.png" alt="">
       </div>
+    </div>
+    <div  id="main2">
+      <div id="left2">
+      <img src="./image/21a49a2f-7332-4283-a622-1d41e9bd91ce-removebg-preview.png" alt="">
+      </div>
+      <div id="right2">
+        <div id="text2">
+          <h1>I am Professional User Experience Designer</h1>
+          <p>I design and develop services for customers specializing<strong> creating stylish,</strong><strong> modern websites,
+          </strong><strong> web services</strong> and 
+           <strong> online stores</strong>. My passion is to design digital user experiences.
+          I design and develop services for customers specializing creating stylish, modern websites, web services.</p>
+          <button>My Projects</button>
+          <button>Download CV</button>
+    </div>
+    </div>
+    </div>
+
+    <div id="title">
+      <h1>Portfolio</h1>
+      <p>Here's a selection of my recent work, showcasing my skills in creating user-centric and visually appealing
+        interfaces.</p>
     </div>
   </body>
 </html>
